# ----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# ----------------------------------------------------------------------------------------------------------
project(ascendc_api_tests)
cmake_minimum_required(VERSION 3.16.0)

add_subdirectory(adv_api)
add_subdirectory(aicpu_api)
add_subdirectory(basic_api)
add_subdirectory(c_api)
add_subdirectory(tensor_api)
add_subdirectory(reg_compute_api)
add_subdirectory(simt_api)
add_subdirectory(utils)
